[workspace]
resolver = "3"
members = ["crates/interpreter", "crates/parser", "crates/python"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

needless_pass_by_value = "warn"
redundant_closure = "warn"
manual_string_new = "warn"
semicolon_if_nothing_returned = "warn"
match_same_arms = "warn"
map_unwrap_or = "warn"
