[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fhirpathrs"
version = "0.1.2"
description = "FHIRPath expression parser and interpreter"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["fhirpath"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/m0rl/fhirpathrs"
Issues = "https://github.com/m0rl/fhirpathrs/issues"

[tool.maturin]
module-name = "fhirpathrs"
manifest-path = "crates/python/Cargo.toml"
