[package]
name = "interpreter"
version = "0.1.4"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
base64 = "0.22"

[dev-dependencies]
divan = { version = "0.1", default-features = false }

[[bench]]
name = "interpret"
harness = false

[lints]
workspace = true
